# mdsanima

./: .editorconfig  .flake8  .gitignore  .pylintrc  .versionrc  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  manifest.json  pyproject.toml  setup.py
.github/: commitlint.config.mjs  dependabot.yml  labels.yml
.github/workflows/: blog-post-workflow.yml  commitlint.yml  labeler.yml  youtube-workflow.yml
docs/source/: about-me.rst  azure.rst  blender.rst  changelog-info.rst  command.rst  conf.py  houdini.rst  index.rst  links.rst  linux.rst  package.rst  pypi.rst  showreel.rst  sphinx.rst  subscribe.rst  vscode.rst
docs/source/_static/css/: my_style.css
mdsanima/: __init__.py  animation.py  render.py
